--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,17 +6,13 @@
 	<div id="container" class="center-block">
 		<div class="item landscape"><%= image_tag "banner.jpg", alt: "FranPlace", class: "img" %></div>
 
-		<% @image_links.each do |link| %>
+		<% @products.each do |product| %>
 		  	<div class="item">
-		  		<%= image_tag link %>
+		  		<%= image_tag product.pic_url, 
+		  			size: "200x#{(product.pic_height.to_f / product.pic_width.to_f * 200).to_i}" %>
 		  	</div>
 		<% end %>
 
-<!-- 	  <% @images.each do |image| %>
-	  	<div class="item">
-	  		<%= image_tag "sample/#{image.split('/').last}" %>
-	  	</div>
-	  <% end %>  -->
 
 <!-- 	  <div class="item">...</div>
 	  <div class="item w2"><%= image_tag "banner.jpg", alt: "FranPlace", class: "img" %></div>
